
- accessibility improvements

- show number of connected clients in window title (and therefore in OS task
  bar)

- bug fix for server logging history graph x-axis

- server logging history grid lines of weekend days are now plotted with
  different line width

- bug fix: fix for disconnect issue at the server

- added "Whats this" help text to the GUI controls in the general settings
  dialog


3.0.2

- fix for Jack Linux audio interface: ports are only once registered and
  connect when the software is started up

- bug fix: under bad network conditions chat messages were randomly repeated

- bug fix: in case the server was shutdown and restarted during a connection,
  the channel name was not updated correctly at the server

- updates for help texts

- new design for fader tag

- new server features: for chat messages the time stamp is also shown, parsing
  of existing log file supported


3.0.1

- bug fix: buzzing occurred when audio stream was interrupted (e.g. in case
  of network trouble)

- in case "Open Chat on New Message" is not enabled, a hint in the status bar
  is shown when a message is received

- use low complexity CELT encoder profile, this lowers audio dropout
  probability on slow computers

  
3.0.0

- introduced new audio codec "CELT", not compatible to old versions

- only the sound card frame sizes 128, 256 and 512 is allowed (since other
  frame sizes require additional conversion buffers which introduce delay)

- IMA-ADPCM, MS-ADPCM removed

- since CELT works on 48 kHz sample rate, resampling was removed

- various bug fixes (e.g. disconnecting did not work reliably)


2.3.0

- new system sample rate of 33 kHz to improve audio quality, not compatible
  to old versions

- added history graph for server logging

- added command line argument for connecting a server at software start-up


2.2.2

- "Mute" and "Solo" check boxes for each connected client fader

- changes to the main GUI (grouped "local" and "server" settings)
